// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Meter background 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  max-width: 100%;
  overflow: hidden;
}

.c1 path {
  transition: stroke 0.3s,stroke-width 0.3s;
}

<div
  class="c0"
>
  <svg
    aria-label="Bar meter with value 20 out of 100"
    class="c1"
    height="24"
    preserveAspectRatio="none"
    viewBox="0 0 384 24"
    width="384"
  >
    <path
      d="M 0,12 L 384,12"
      fill="none"
      stroke="#EDEDED"
      stroke-linecap="square"
      stroke-width="24"
    />
    <path
      d="M 0,24 L 0,0 L 76.8,0 L 76.8,24 Z"
      fill="#6FFFB0"
      stroke="none"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Bar meter with value 20 out of 100"
    class="c1"
    height="24"
    preserveAspectRatio="none"
    viewBox="0 0 384 24"
    width="384"
  >
    <path
      d="M 0,12 L 384,12"
      fill="none"
      stroke="#EDEDED"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 0,24 L 0,0 L 76.8,0 L 76.8,24 Z"
      fill="#6FFFB0"
      stroke="none"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Circle meter with value 20 out of 100"
    class="c1"
    height="384"
    viewBox="0 0 384 384"
    width="384"
  >
    <circle
      cx="192"
      cy="192"
      fill="none"
      r="180"
      stroke="#EDEDED"
      stroke-linecap="square"
      stroke-width="24"
    />
    <path
      d="M 192.0000000000 24.0000000000 L 192.0000000000 0.0000000000 A 192.0000000000 192.0000000000 0 0 1 374.6028511287 132.6687370800 L 351.7774947376 140.0851449450 A 168.0000000000 168.0000000000 0 0 0 192.0000000000 24.0000000000 Z"
      fill="#6FFFB0"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Circle meter with value 20 out of 100"
    class="c1"
    height="384"
    viewBox="0 0 384 384"
    width="384"
  >
    <circle
      cx="192"
      cy="192"
      fill="none"
      r="180"
      stroke="#EDEDED"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 192.0000000000 24.0000000000 L 192.0000000000 0.0000000000 A 192.0000000000 192.0000000000 0 0 1 374.6028511287 132.6687370800 L 351.7774947376 140.0851449450 A 168.0000000000 168.0000000000 0 0 0 192.0000000000 24.0000000000 Z"
      fill="#6FFFB0"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Bar meter with value 20 out of 100"
    class="c1"
    height="24"
    preserveAspectRatio="none"
    viewBox="0 0 384 24"
    width="384"
  >
    <path
      d="M 0,12 L 384,12"
      fill="none"
      stroke="#EDEDED"
      stroke-linecap="square"
      stroke-opacity="0.2"
      stroke-width="24"
    />
    <path
      d="M 0,24 L 0,0 L 76.8,0 L 76.8,24 Z"
      fill="#6FFFB0"
      stroke="none"
      stroke-width="0"
    />
  </svg>
</div>
`;

exports[`Meter basic 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  max-width: 100%;
  overflow: hidden;
}

.c1 path {
  transition: stroke 0.3s,stroke-width 0.3s;
}

<div
  class="c0"
>
  <svg
    aria-label="Bar meter with value 20 out of 100"
    class="c1"
    height="24"
    preserveAspectRatio="none"
    viewBox="0 0 384 24"
    width="384"
  >
    <path
      d="M 0,12 L 384,12"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 0,24 L 0,0 L 76.8,0 L 76.8,24 Z"
      fill="#6FFFB0"
      stroke="none"
      stroke-width="0"
    />
  </svg>
</div>
`;

exports[`Meter basic renders outside grommet wrapper 1`] = `
.c0 {
  max-width: 100%;
  overflow: hidden;
}

.c0 path {
  transition: stroke 0.3s,stroke-width 0.3s;
}

<svg
  aria-label="Bar meter with value 20 out of 100"
  class="c0"
  height="24"
  preserveAspectRatio="none"
  viewBox="0 0 384 24"
  width="384"
>
  <path
    d="M 0,12 L 384,12"
    fill="none"
    stroke="#F2F2F2"
    stroke-linecap="square"
    stroke-opacity="0.4"
    stroke-width="24"
  />
  <path
    d="M 0,24 L 0,0 L 76.8,0 L 76.8,24 Z"
    fill="#6FFFB0"
    stroke="none"
    stroke-width="0"
  />
</svg>
`;

exports[`Meter boundary values 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  max-width: 100%;
  overflow: hidden;
}

.c1 path {
  transition: stroke 0.3s,stroke-width 0.3s;
}

<div
  class="c0"
>
  <svg
    aria-label="Circle meter with values 2.26, 8.04 out of 10.3"
    class="c1"
    height="384"
    viewBox="0 0 384 384"
    width="384"
  >
    <circle
      cx="192"
      cy="192"
      fill="none"
      r="180"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 192.0000000000 24.0000000000 L 192.0000000000 0.0000000000 A 192.0000000000 192.0000000000 0 0 1 380.4661995532 155.3326899543 L 356.9079246090 159.9161037100 A 168.0000000000 168.0000000000 0 0 0 192.0000000000 24.0000000000 Z"
      fill="#00873D"
      stroke="#00873D"
      stroke-linecap="butt"
      stroke-width="0"
    />
    <path
      d="M 356.9079246090 159.9161037100 L 380.4661995532 155.3326899543 A 192.0000000000 192.0000000000 0 1 1 191.9997821829 0.0000000001 L 191.9998094100 24.0000000001 A 168.0000000000 168.0000000000 0 1 0 356.9079246090 159.9161037100 Z"
      fill="#6FFFB0"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="0"
    />
  </svg>
</div>
`;

exports[`Meter custom message on meter plural 1`] = `
.c0 {
  max-width: 100%;
  overflow: hidden;
}

.c0 path {
  transition: stroke 0.3s,stroke-width 0.3s;
}

<svg
  aria-label="Bar meter with value 15 out of 100"
  class="c0"
  height="24"
  preserveAspectRatio="none"
  viewBox="0 0 384 24"
  width="384"
>
  <path
    d="M 0,12 L 384,12"
    fill="none"
    stroke="#F2F2F2"
    stroke-linecap="square"
    stroke-opacity="0.4"
    stroke-width="24"
  />
  <path
    d="M 0,24 L 0,0 L 57.6,0 L 57.6,24 Z"
    fill="#6FFFB0"
    stroke="none"
    stroke-width="0"
  />
</svg>
`;

exports[`Meter custom message on meter singular 1`] = `
.c0 {
  max-width: 100%;
  overflow: hidden;
}

.c0 path {
  transition: stroke 0.3s,stroke-width 0.3s;
}

<svg
  aria-label="Pie meter with value 15 out of 100"
  class="c0"
  height="384"
  viewBox="0 0 384 384"
  width="384"
>
  <circle
    cx="192"
    cy="192"
    fill="none"
    r="96"
    stroke="#F2F2F2"
    stroke-linecap="square"
    stroke-opacity="0.4"
    stroke-width="192"
  />
  <path
    d="M 192.0000000000 192.0000000000 L 192.0000000000 0.0000000000 A 192.0000000000 192.0000000000 0 0 1 347.3312629200 79.1452315598 L 192.0000000000 192.0000000000"
    fill="#6FFFB0"
    stroke="#6FFFB0"
    stroke-linecap="butt"
    stroke-width="0"
  />
</svg>
`;

exports[`Meter custom message plural 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  max-width: 100%;
  overflow: hidden;
}

.c1 path {
  transition: stroke 0.3s,stroke-width 0.3s;
}

<div
  class="c0"
>
  <svg
    aria-label="bar has multiple values 8.9 and 12.4% out of a max of 100."
    class="c1"
    height="24"
    preserveAspectRatio="none"
    viewBox="0 0 384 24"
    width="384"
  >
    <path
      d="M 0,12 L 384,12"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 160.45070422535213,24 L 160.45070422535213,0 L 384,0 L 384,24 Z"
      fill="#6FFFB0"
      stroke="none"
      stroke-width="0"
    />
    <path
      d="M 0,24 L 0,0 L 160.45070422535213,0 L 160.45070422535213,24 Z"
      fill="#00873D"
      stroke="none"
      stroke-width="0"
    />
  </svg>
</div>
`;

exports[`Meter custom message singular 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  max-width: 100%;
  overflow: hidden;
}

.c1 path {
  transition: stroke 0.3s,stroke-width 0.3s;
}

<div
  class="c0"
>
  <svg
    aria-label="circle meter value is 30% out of 100."
    class="c1"
    height="384"
    viewBox="0 0 384 384"
    width="384"
  >
    <circle
      cx="192"
      cy="192"
      fill="none"
      r="180"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 192.0000000000 24.0000000000 L 192.0000000000 0.0000000000 A 192.0000000000 192.0000000000 0 0 1 374.6028511287 251.3312629200 L 351.7774947376 243.9148550550 A 168.0000000000 168.0000000000 0 0 0 192.0000000000 24.0000000000 Z"
      fill="#6FFFB0"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="0"
    />
  </svg>
</div>
`;

exports[`Meter default 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  max-width: 100%;
  overflow: hidden;
}

.c1 path {
  transition: stroke 0.3s,stroke-width 0.3s;
}

<div
  class="c0"
>
  <svg
    aria-label="Bar meter with values 0 out of 100"
    class="c1"
    height="24"
    preserveAspectRatio="none"
    viewBox="0 0 384 24"
    width="384"
  >
    <path
      d="M 0,12 L 384,12"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
  </svg>
</div>
`;

exports[`Meter large circle values 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  max-width: 100%;
  overflow: hidden;
}

.c1 path {
  transition: stroke 0.3s,stroke-width 0.3s;
}

<div
  class="c0"
>
  <svg
    aria-label="Circle meter with values 904426, 692866, 642068, 512772, 5032870 out of 7785002"
    class="c1"
    height="192"
    viewBox="0 0 192 192"
    width="192"
  >
    <circle
      cx="96"
      cy="96"
      fill="none"
      r="90"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="12"
    />
    <path
      d="M 96.0000000000 12.0000000000 L 96.0000000000 0.0000000000 A 96.0000000000 96.0000000000 0 0 1 160.0159653975 24.4601078123 L 152.0139697228 33.4025943358 A 84.0000000000 84.0000000000 0 0 0 96.0000000000 12.0000000000 Z"
      fill="#6FFFB0"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="0"
    />
    <path
      d="M 152.0139697228 33.4025943358 L 160.0159653975 24.4601078123 A 96.0000000000 96.0000000000 0 0 1 188.2176318295 69.3183887338 L 176.6904278508 72.6535901420 A 84.0000000000 84.0000000000 0 0 0 152.0139697228 33.4025943358 Z"
      fill="#00873D"
      stroke="#00873D"
      stroke-linecap="butt"
      stroke-width="0"
    />
    <path
      d="M 176.6904278508 72.6535901420 L 188.2176318295 69.3183887338 A 96.0000000000 96.0000000000 0 0 1 189.3263285806 118.4988087164 L 177.6605375081 115.6864576269 A 84.0000000000 84.0000000000 0 0 0 176.6904278508 72.6535901420 Z"
      fill="#3D138D"
      stroke="#3D138D"
      stroke-linecap="butt"
      stroke-width="0"
    />
    <path
      d="M 177.6605375081 115.6864576269 L 189.3263285806 118.4988087164 A 96.0000000000 96.0000000000 0 0 1 172.3999477405 154.1295792626 L 162.8499542730 146.8633818548 A 84.0000000000 84.0000000000 0 0 0 177.6605375081 115.6864576269 Z"
      fill="#00739D"
      stroke="#00739D"
      stroke-linecap="butt"
      stroke-width="0"
    />
    <path
      d="M 162.8499542730 146.8633818548 L 172.3999477405 154.1295792626 A 96.0000000000 96.0000000000 0 1 1 96.0000000000 0.0000000000 L 96.0000000000 12.0000000000 A 84.0000000000 84.0000000000 0 1 0 162.8499542730 146.8633818548 Z"
      fill="#A2423D"
      stroke="#A2423D"
      stroke-linecap="butt"
      stroke-width="0"
    />
  </svg>
</div>
`;

exports[`Meter many values 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  max-width: 100%;
  overflow: hidden;
}

.c1 path {
  transition: stroke 0.3s,stroke-width 0.3s;
}

<div
  class="c0"
>
  <svg
    aria-label="Bar meter with values 5, 5, 5, 5, 5, 5, 5, 5 out of 40"
    class="c1"
    height="24"
    preserveAspectRatio="none"
    viewBox="0 0 384 24"
    width="384"
  >
    <path
      d="M 0,12 L 384,12"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 336,24 L 336,0 L 384,0 L 384,24 Z"
      fill="#6FFFB0"
      stroke="none"
      stroke-width="0"
    />
    <path
      d="M 288,24 L 288,0 L 336,0 L 336,24 Z"
      fill="#00873D"
      stroke="none"
      stroke-width="0"
    />
    <path
      d="M 240,24 L 240,0 L 288,0 L 288,24 Z"
      fill="#3D138D"
      stroke="none"
      stroke-width="0"
    />
    <path
      d="M 192,24 L 192,0 L 240,0 L 240,24 Z"
      fill="#00739D"
      stroke="none"
      stroke-width="0"
    />
    <path
      d="M 144,24 L 144,0 L 192,0 L 192,24 Z"
      fill="#A2423D"
      stroke="none"
      stroke-width="0"
    />
    <path
      d="M 96,24 L 96,0 L 144,0 L 144,24 Z"
      fill="#6FFFB0"
      stroke="none"
      stroke-width="0"
    />
    <path
      d="M 48,24 L 48,0 L 96,0 L 96,24 Z"
      fill="#00873D"
      stroke="none"
      stroke-width="0"
    />
    <path
      d="M 0,24 L 0,0 L 48,0 L 48,24 Z"
      fill="#3D138D"
      stroke="none"
      stroke-width="0"
    />
  </svg>
</div>
`;

exports[`Meter reverse 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  max-width: 100%;
  overflow: hidden;
  transform: scale(-1,1);
}

.c1 path {
  transition: stroke 0.3s,stroke-width 0.3s;
}

<div
  class="c0"
>
  <svg
    aria-label="Bar meter with value 20 out of 100"
    class="c1"
    height="24"
    preserveAspectRatio="none"
    viewBox="0 0 384 24"
    width="384"
  >
    <path
      d="M 0,12 L 384,12"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 0,24 L 0,0 L 76.8,0 L 76.8,24 Z"
      fill="#6FFFB0"
      stroke="none"
      stroke-width="0"
    />
  </svg>
</div>
`;

exports[`Meter reverse circle 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  max-width: 100%;
  overflow: hidden;
  transform: scale(-1,1);
}

.c1 path {
  transition: stroke 0.3s,stroke-width 0.3s;
}

<div
  class="c0"
>
  <svg
    aria-label="Circle meter with value 20 out of 100"
    class="c1"
    height="384"
    viewBox="0 0 384 384"
    width="384"
  >
    <circle
      cx="192"
      cy="192"
      fill="none"
      r="180"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-width="24"
    />
    <path
      d="M 192.0000000000 24.0000000000 L 192.0000000000 0.0000000000 A 192.0000000000 192.0000000000 0 0 1 374.6028511287 132.6687370800 L 351.7774947376 140.0851449450 A 168.0000000000 168.0000000000 0 0 0 192.0000000000 24.0000000000 Z"
      fill="#6FFFB0"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="0"
    />
  </svg>
</div>
`;

exports[`Meter round 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  max-width: 100%;
  overflow: hidden;
  border-radius: 24px;
}

.c1 path {
  transition: stroke 0.3s,stroke-width 0.3s;
}

.c2 {
  max-width: 100%;
  overflow: hidden;
}

.c2 path {
  transition: stroke 0.3s,stroke-width 0.3s;
}

<div
  class="c0"
>
  <svg
    aria-label="Bar meter with value 20 out of 100"
    class="c1"
    height="24"
    preserveAspectRatio="none"
    viewBox="0 0 384 24"
    width="384"
  >
    <path
      d="M 12,12 L 372,12"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="round"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 12,24 A 12,12 0 0 1 12,0 L 84,0 A 12,12 0 0 1 84,24 Z"
      fill="#6FFFB0"
      stroke="none"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Circle meter with value 20 out of 100"
    class="c2"
    height="384"
    viewBox="0 0 384 384"
    width="384"
  >
    <circle
      cx="192"
      cy="192"
      fill="none"
      r="180"
      stroke="#F2F2F2"
      stroke-linecap="round"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 192.0000000000 24.0000000000 A 12.0000000000 12.0000000000 0 0 1 192.0000000000 0.0000000000 A 192.0000000000 192.0000000000 0 0 1 374.6028511287 132.6687370800 A 12.0000000000 12.0000000000 0 0 1 351.7774947376 140.0851449450 A 168.0000000000 168.0000000000 0 0 0 192.0000000000 24.0000000000 Z"
      fill="#6FFFB0"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Semicircle meter with value 20 out of 100"
    class="c2"
    height="192"
    viewBox="0 0 384 192"
    width="384"
  >
    <path
      d="M 372.0000000000 192.0000000000 A 180.0000000000 180.0000000000 0 0 0 12.0000000000 192.0000000000"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="round"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 24.0000000000 192.0000000000 L 0.0000000000 192.0000000000 A 192.0000000000 192.0000000000 0 0 1 36.6687370800 79.1452315598 A 12.0000000000 12.0000000000 0 0 1 56.0851449450 93.2520776149 A 168.0000000000 168.0000000000 0 0 0 24.0000000000 192.0000000000 Z"
      fill="#6FFFB0"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="0"
    />
  </svg>
</div>
`;

exports[`Meter rtl theme 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  max-width: 100%;
  overflow: hidden;
  transform: scale(-1,1);
}

.c1 path {
  transition: stroke 0.3s,stroke-width 0.3s;
}

<div
  class="c0"
  dir="rtl"
>
  <svg
    aria-label="Bar meter with value 20 out of 100"
    class="c1"
    height="24"
    preserveAspectRatio="none"
    viewBox="0 0 384 24"
    width="384"
  >
    <path
      d="M 0,12 L 384,12"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 0,24 L 0,0 L 76.8,0 L 76.8,24 Z"
      fill="#6FFFB0"
      stroke="none"
      stroke-width="0"
    />
  </svg>
</div>
`;

exports[`Meter single 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  max-width: 100%;
  overflow: hidden;
}

.c1 path {
  transition: stroke 0.3s,stroke-width 0.3s;
}

<div
  class="c0"
>
  <svg
    aria-label="Bar meter with value 25 out of 100"
    class="c1"
    height="24"
    preserveAspectRatio="none"
    viewBox="0 0 384 24"
    width="384"
  >
    <path
      d="M 0,12 L 384,12"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 0,24 L 0,0 L 96,0 L 96,24 Z"
      fill="#6FFFB0"
      stroke="none"
      stroke-width="0"
    />
  </svg>
</div>
`;

exports[`Meter size 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  max-width: 100%;
  overflow: hidden;
}

.c1 path {
  transition: stroke 0.3s,stroke-width 0.3s;
}

<div
  class="c0"
>
  <svg
    aria-label="Bar meter with value 20 out of 100"
    class="c1"
    height="24"
    preserveAspectRatio="none"
    viewBox="0 0 96 24"
    width="96"
  >
    <path
      d="M 0,12 L 96,12"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 0,24 L 0,0 L 19.2,0 L 19.2,24 Z"
      fill="#6FFFB0"
      stroke="none"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Bar meter with value 20 out of 100"
    class="c1"
    height="24"
    preserveAspectRatio="none"
    viewBox="0 0 192 24"
    width="192"
  >
    <path
      d="M 0,12 L 192,12"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 0,24 L 0,0 L 38.4,0 L 38.4,24 Z"
      fill="#6FFFB0"
      stroke="none"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Bar meter with value 20 out of 100"
    class="c1"
    height="24"
    preserveAspectRatio="none"
    viewBox="0 0 384 24"
    width="384"
  >
    <path
      d="M 0,12 L 384,12"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 0,24 L 0,0 L 76.8,0 L 76.8,24 Z"
      fill="#6FFFB0"
      stroke="none"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Bar meter with value 20 out of 100"
    class="c1"
    height="24"
    preserveAspectRatio="none"
    viewBox="0 0 768 24"
    width="768"
  >
    <path
      d="M 0,12 L 768,12"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 0,24 L 0,0 L 153.6,0 L 153.6,24 Z"
      fill="#6FFFB0"
      stroke="none"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Bar meter with value 20 out of 100"
    class="c1"
    height="24"
    preserveAspectRatio="none"
    viewBox="0 0 1152 24"
    width="1152"
  >
    <path
      d="M 0,12 L 1152,12"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 0,24 L 0,0 L 230.4,0 L 230.4,24 Z"
      fill="#6FFFB0"
      stroke="none"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Bar meter with value 20 out of 100"
    class="c1"
    height="24"
    preserveAspectRatio="none"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M 0,12 L 24,12"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 0,24 L 0,0 L 4.8,0 L 4.8,24 Z"
      fill="#6FFFB0"
      stroke="none"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Bar meter with value 20 out of 100"
    class="c1"
    height="24"
    preserveAspectRatio="none"
    viewBox="0 0 288 24"
    width="100%"
  >
    <path
      d="M 0,12 L 288,12"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 0,24 L 0,0 L 57.6,0 L 57.6,24 Z"
      fill="#6FFFB0"
      stroke="none"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Circle meter with value 20 out of 100"
    class="c1"
    height="96"
    viewBox="0 0 96 96"
    width="96"
  >
    <circle
      cx="48"
      cy="48"
      fill="none"
      r="36"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 48.0000000000 24.0000000000 L 48.0000000000 0.0000000000 A 48.0000000000 48.0000000000 0 0 1 93.6507127822 33.1671842700 L 70.8253563911 40.5835921350 A 24.0000000000 24.0000000000 0 0 0 48.0000000000 24.0000000000 Z"
      fill="#6FFFB0"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Circle meter with value 20 out of 100"
    class="c1"
    height="192"
    viewBox="0 0 192 192"
    width="192"
  >
    <circle
      cx="96"
      cy="96"
      fill="none"
      r="84"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 96.0000000000 24.0000000000 L 96.0000000000 0.0000000000 A 96.0000000000 96.0000000000 0 0 1 187.3014255643 66.3343685400 L 164.4760691733 73.7507764050 A 72.0000000000 72.0000000000 0 0 0 96.0000000000 24.0000000000 Z"
      fill="#6FFFB0"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Circle meter with value 20 out of 100"
    class="c1"
    height="384"
    viewBox="0 0 384 384"
    width="384"
  >
    <circle
      cx="192"
      cy="192"
      fill="none"
      r="180"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 192.0000000000 24.0000000000 L 192.0000000000 0.0000000000 A 192.0000000000 192.0000000000 0 0 1 374.6028511287 132.6687370800 L 351.7774947376 140.0851449450 A 168.0000000000 168.0000000000 0 0 0 192.0000000000 24.0000000000 Z"
      fill="#6FFFB0"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Circle meter with value 20 out of 100"
    class="c1"
    height="768"
    viewBox="0 0 768 768"
    width="768"
  >
    <circle
      cx="384"
      cy="384"
      fill="none"
      r="372"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 384.0000000000 24.0000000000 L 384.0000000000 0.0000000000 A 384.0000000000 384.0000000000 0 0 1 749.2057022573 265.3374741600 L 726.3803458663 272.7538820250 A 360.0000000000 360.0000000000 0 0 0 384.0000000000 24.0000000000 Z"
      fill="#6FFFB0"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Circle meter with value 20 out of 100"
    class="c1"
    height="1152"
    viewBox="0 0 1152 1152"
    width="1152"
  >
    <circle
      cx="576"
      cy="576"
      fill="none"
      r="564"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 576.0000000000 24.0000000000 L 576.0000000000 0.0000000000 A 576.0000000000 576.0000000000 0 0 1 1123.8085533860 398.0062112400 L 1100.9831969949 405.4226191050 A 552.0000000000 552.0000000000 0 0 0 576.0000000000 24.0000000000 Z"
      fill="#6FFFB0"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Circle meter with value 20 out of 100"
    class="c1"
    height="55"
    viewBox="0 0 55 55"
    width="55"
  >
    <circle
      cx="27.5"
      cy="27.5"
      fill="none"
      r="17.75"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="19.5"
    />
    <path
      d="M 27.5000000000 19.5000000000 L 27.5000000000 0.0000000000 A 27.5000000000 27.5000000000 0 0 1 53.6540541981 19.0020326547 L 35.1084521304 25.0278640450 A 8.0000000000 8.0000000000 0 0 0 27.5000000000 19.5000000000 Z"
      fill="#6FFFB0"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Circle meter with value 20 out of 100"
    class="c1"
    height="100%"
    viewBox="0 0 288 288"
    width="100%"
  >
    <circle
      cx="144"
      cy="144"
      fill="none"
      r="132"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 144.0000000000 24.0000000000 L 144.0000000000 0.0000000000 A 144.0000000000 144.0000000000 0 0 1 280.9521383465 99.5015528100 L 258.1267819554 106.9179606750 A 120.0000000000 120.0000000000 0 0 0 144.0000000000 24.0000000000 Z"
      fill="#6FFFB0"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Pie meter with value 20 out of 100"
    class="c1"
    height="96"
    viewBox="0 0 96 96"
    width="96"
  >
    <circle
      cx="48"
      cy="48"
      fill="none"
      r="24"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="48"
    />
    <path
      d="M 48.0000000000 48.0000000000 L 48.0000000000 0.0000000000 A 48.0000000000 48.0000000000 0 0 1 93.6507127822 33.1671842700 L 48.0000000000 48.0000000000"
      fill="#6FFFB0"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Pie meter with value 20 out of 100"
    class="c1"
    height="192"
    viewBox="0 0 192 192"
    width="192"
  >
    <circle
      cx="96"
      cy="96"
      fill="none"
      r="48"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="96"
    />
    <path
      d="M 96.0000000000 96.0000000000 L 96.0000000000 0.0000000000 A 96.0000000000 96.0000000000 0 0 1 187.3014255643 66.3343685400 L 96.0000000000 96.0000000000"
      fill="#6FFFB0"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Pie meter with value 20 out of 100"
    class="c1"
    height="384"
    viewBox="0 0 384 384"
    width="384"
  >
    <circle
      cx="192"
      cy="192"
      fill="none"
      r="96"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="192"
    />
    <path
      d="M 192.0000000000 192.0000000000 L 192.0000000000 0.0000000000 A 192.0000000000 192.0000000000 0 0 1 374.6028511287 132.6687370800 L 192.0000000000 192.0000000000"
      fill="#6FFFB0"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Pie meter with value 20 out of 100"
    class="c1"
    height="768"
    viewBox="0 0 768 768"
    width="768"
  >
    <circle
      cx="384"
      cy="384"
      fill="none"
      r="192"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="384"
    />
    <path
      d="M 384.0000000000 384.0000000000 L 384.0000000000 0.0000000000 A 384.0000000000 384.0000000000 0 0 1 749.2057022573 265.3374741600 L 384.0000000000 384.0000000000"
      fill="#6FFFB0"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Pie meter with value 20 out of 100"
    class="c1"
    height="1152"
    viewBox="0 0 1152 1152"
    width="1152"
  >
    <circle
      cx="576"
      cy="576"
      fill="none"
      r="288"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="576"
    />
    <path
      d="M 576.0000000000 576.0000000000 L 576.0000000000 0.0000000000 A 576.0000000000 576.0000000000 0 0 1 1123.8085533860 398.0062112400 L 576.0000000000 576.0000000000"
      fill="#6FFFB0"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Pie meter with value 20 out of 100"
    class="c1"
    height="55"
    viewBox="0 0 55 55"
    width="55"
  >
    <circle
      cx="27.5"
      cy="27.5"
      fill="none"
      r="13.75"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="27.5"
    />
    <path
      d="M 27.5000000000 27.5000000000 L 27.5000000000 0.0000000000 A 27.5000000000 27.5000000000 0 0 1 53.6540541981 19.0020326547 L 27.5000000000 27.5000000000"
      fill="#6FFFB0"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Pie meter with value 20 out of 100"
    class="c1"
    height="100%"
    viewBox="0 0 288 288"
    width="100%"
  >
    <circle
      cx="144"
      cy="144"
      fill="none"
      r="72"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="144"
    />
    <path
      d="M 144.0000000000 144.0000000000 L 144.0000000000 0.0000000000 A 144.0000000000 144.0000000000 0 0 1 280.9521383465 99.5015528100 L 144.0000000000 144.0000000000"
      fill="#6FFFB0"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Semicircle meter with value 20 out of 100"
    class="c1"
    height="48"
    viewBox="0 0 96 48"
    width="96"
  >
    <path
      d="M 84.0000000000 48.0000000000 A 36.0000000000 36.0000000000 0 0 0 12.0000000000 48.0000000000"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 24.0000000000 48.0000000000 L 0.0000000000 48.0000000000 A 48.0000000000 48.0000000000 0 0 1 9.1671842700 19.7863078900 L 28.5835921350 33.8931539450 A 24.0000000000 24.0000000000 0 0 0 24.0000000000 48.0000000000 Z"
      fill="#6FFFB0"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Semicircle meter with value 20 out of 100"
    class="c1"
    height="96"
    viewBox="0 0 192 96"
    width="192"
  >
    <path
      d="M 180.0000000000 96.0000000000 A 84.0000000000 84.0000000000 0 0 0 12.0000000000 96.0000000000"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 24.0000000000 96.0000000000 L 0.0000000000 96.0000000000 A 96.0000000000 96.0000000000 0 0 1 18.3343685400 39.5726157799 L 37.7507764050 53.6794618349 A 72.0000000000 72.0000000000 0 0 0 24.0000000000 96.0000000000 Z"
      fill="#6FFFB0"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Semicircle meter with value 20 out of 100"
    class="c1"
    height="192"
    viewBox="0 0 384 192"
    width="384"
  >
    <path
      d="M 372.0000000000 192.0000000000 A 180.0000000000 180.0000000000 0 0 0 12.0000000000 192.0000000000"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 24.0000000000 192.0000000000 L 0.0000000000 192.0000000000 A 192.0000000000 192.0000000000 0 0 1 36.6687370800 79.1452315598 L 56.0851449450 93.2520776149 A 168.0000000000 168.0000000000 0 0 0 24.0000000000 192.0000000000 Z"
      fill="#6FFFB0"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Semicircle meter with value 20 out of 100"
    class="c1"
    height="384"
    viewBox="0 0 768 384"
    width="768"
  >
    <path
      d="M 756.0000000000 384.0000000000 A 372.0000000000 372.0000000000 0 0 0 12.0000000000 384.0000000000"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 24.0000000000 384.0000000000 L 0.0000000000 384.0000000000 A 384.0000000000 384.0000000000 0 0 1 73.3374741600 158.2904631197 L 92.7538820250 172.3973091747 A 360.0000000000 360.0000000000 0 0 0 24.0000000000 384.0000000000 Z"
      fill="#6FFFB0"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Semicircle meter with value 20 out of 100"
    class="c1"
    height="576"
    viewBox="0 0 1152 576"
    width="1152"
  >
    <path
      d="M 1140.0000000000 576.0000000000 A 564.0000000000 564.0000000000 0 0 0 12.0000000000 576.0000000000"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 24.0000000000 576.0000000000 L 0.0000000000 576.0000000000 A 576.0000000000 576.0000000000 0 0 1 110.0062112400 237.4356946795 L 129.4226191050 251.5425407346 A 552.0000000000 552.0000000000 0 0 0 24.0000000000 576.0000000000 Z"
      fill="#6FFFB0"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Semicircle meter with value 20 out of 100"
    class="c1"
    height="27.5"
    viewBox="0 0 55 27.5"
    width="55"
  >
    <path
      d="M 45.2500000000 27.5000000000 A 17.7500000000 17.7500000000 0 0 0 9.7500000000 27.5000000000"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="19.5"
    />
    <path
      d="M 19.5000000000 27.5000000000 L 0.0000000000 27.5000000000 A 27.5000000000 27.5000000000 0 0 1 5.2520326547 11.3359055620 L 21.0278640450 22.7977179817 A 8.0000000000 8.0000000000 0 0 0 19.5000000000 27.5000000000 Z"
      fill="#6FFFB0"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Semicircle meter with value 20 out of 100"
    class="c1"
    height="100%"
    viewBox="0 0 288 144"
    width="100%"
  >
    <path
      d="M 276.0000000000 144.0000000000 A 132.0000000000 132.0000000000 0 0 0 12.0000000000 144.0000000000"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 24.0000000000 144.0000000000 L 0.0000000000 144.0000000000 A 144.0000000000 144.0000000000 0 0 1 27.5015528100 59.3589236699 L 46.9179606750 73.4657697249 A 120.0000000000 120.0000000000 0 0 0 24.0000000000 144.0000000000 Z"
      fill="#6FFFB0"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="0"
    />
  </svg>
</div>
`;

exports[`Meter thickness 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  max-width: 100%;
  overflow: hidden;
}

.c1 path {
  transition: stroke 0.3s,stroke-width 0.3s;
}

<div
  class="c0"
>
  <svg
    aria-label="Bar meter with value 20 out of 100"
    class="c1"
    height="6"
    preserveAspectRatio="none"
    viewBox="0 0 384 6"
    width="384"
  >
    <path
      d="M 0,3 L 384,3"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="6"
    />
    <path
      d="M 0,6 L 0,0 L 76.8,0 L 76.8,6 Z"
      fill="#6FFFB0"
      stroke="none"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Bar meter with value 20 out of 100"
    class="c1"
    height="12"
    preserveAspectRatio="none"
    viewBox="0 0 384 12"
    width="384"
  >
    <path
      d="M 0,6 L 384,6"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="12"
    />
    <path
      d="M 0,12 L 0,0 L 76.8,0 L 76.8,12 Z"
      fill="#6FFFB0"
      stroke="none"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Bar meter with value 20 out of 100"
    class="c1"
    height="24"
    preserveAspectRatio="none"
    viewBox="0 0 384 24"
    width="384"
  >
    <path
      d="M 0,12 L 384,12"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 0,24 L 0,0 L 76.8,0 L 76.8,24 Z"
      fill="#6FFFB0"
      stroke="none"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Bar meter with value 20 out of 100"
    class="c1"
    height="48"
    preserveAspectRatio="none"
    viewBox="0 0 384 48"
    width="384"
  >
    <path
      d="M 0,24 L 384,24"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="48"
    />
    <path
      d="M 0,48 L 0,0 L 76.8,0 L 76.8,48 Z"
      fill="#6FFFB0"
      stroke="none"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Bar meter with value 20 out of 100"
    class="c1"
    height="96"
    preserveAspectRatio="none"
    viewBox="0 0 384 96"
    width="384"
  >
    <path
      d="M 0,48 L 384,48"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="96"
    />
    <path
      d="M 0,96 L 0,0 L 76.8,0 L 76.8,96 Z"
      fill="#6FFFB0"
      stroke="none"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Bar meter with value 20 out of 100"
    class="c1"
    height="55"
    preserveAspectRatio="none"
    viewBox="0 0 384 55"
    width="384"
  >
    <path
      d="M 0,27.5 L 384,27.5"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="55"
    />
    <path
      d="M 0,55 L 0,0 L 76.8,0 L 76.8,55 Z"
      fill="#6FFFB0"
      stroke="none"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Circle meter with value 20 out of 100"
    class="c1"
    height="384"
    viewBox="0 0 384 384"
    width="384"
  >
    <circle
      cx="192"
      cy="192"
      fill="none"
      r="189"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="6"
    />
    <path
      d="M 192.0000000000 6.0000000000 L 192.0000000000 0.0000000000 A 192.0000000000 192.0000000000 0 0 1 374.6028511287 132.6687370800 L 368.8965120309 134.5228390463 A 186.0000000000 186.0000000000 0 0 0 192.0000000000 6.0000000000 Z"
      fill="#6FFFB0"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Circle meter with value 20 out of 100"
    class="c1"
    height="384"
    viewBox="0 0 384 384"
    width="384"
  >
    <circle
      cx="192"
      cy="192"
      fill="none"
      r="186"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="12"
    />
    <path
      d="M 192.0000000000 12.0000000000 L 192.0000000000 0.0000000000 A 192.0000000000 192.0000000000 0 0 1 374.6028511287 132.6687370800 L 363.1901729331 136.3769410125 A 180.0000000000 180.0000000000 0 0 0 192.0000000000 12.0000000000 Z"
      fill="#6FFFB0"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Circle meter with value 20 out of 100"
    class="c1"
    height="384"
    viewBox="0 0 384 384"
    width="384"
  >
    <circle
      cx="192"
      cy="192"
      fill="none"
      r="180"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 192.0000000000 24.0000000000 L 192.0000000000 0.0000000000 A 192.0000000000 192.0000000000 0 0 1 374.6028511287 132.6687370800 L 351.7774947376 140.0851449450 A 168.0000000000 168.0000000000 0 0 0 192.0000000000 24.0000000000 Z"
      fill="#6FFFB0"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Circle meter with value 20 out of 100"
    class="c1"
    height="384"
    viewBox="0 0 384 384"
    width="384"
  >
    <circle
      cx="192"
      cy="192"
      fill="none"
      r="168"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="48"
    />
    <path
      d="M 192.0000000000 48.0000000000 L 192.0000000000 0.0000000000 A 192.0000000000 192.0000000000 0 0 1 374.6028511287 132.6687370800 L 328.9521383465 147.5015528100 A 144.0000000000 144.0000000000 0 0 0 192.0000000000 48.0000000000 Z"
      fill="#6FFFB0"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Circle meter with value 20 out of 100"
    class="c1"
    height="384"
    viewBox="0 0 384 384"
    width="384"
  >
    <circle
      cx="192"
      cy="192"
      fill="none"
      r="144"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="96"
    />
    <path
      d="M 192.0000000000 96.0000000000 L 192.0000000000 0.0000000000 A 192.0000000000 192.0000000000 0 0 1 374.6028511287 132.6687370800 L 283.3014255643 162.3343685400 A 96.0000000000 96.0000000000 0 0 0 192.0000000000 96.0000000000 Z"
      fill="#6FFFB0"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Circle meter with value 20 out of 100"
    class="c1"
    height="384"
    viewBox="0 0 384 384"
    width="384"
  >
    <circle
      cx="192"
      cy="192"
      fill="none"
      r="164.5"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="55"
    />
    <path
      d="M 192.0000000000 55.0000000000 L 192.0000000000 0.0000000000 A 192.0000000000 192.0000000000 0 0 1 374.6028511287 132.6687370800 L 322.2947427324 149.6646717706 A 137.0000000000 137.0000000000 0 0 0 192.0000000000 55.0000000000 Z"
      fill="#6FFFB0"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="0"
    />
  </svg>
</div>
`;

exports[`Meter type 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  max-width: 100%;
  overflow: hidden;
}

.c1 path {
  transition: stroke 0.3s,stroke-width 0.3s;
}

<div
  class="c0"
>
  <svg
    aria-label="Bar meter with value 20 out of 100"
    class="c1"
    height="24"
    preserveAspectRatio="none"
    viewBox="0 0 384 24"
    width="384"
  >
    <path
      d="M 0,12 L 384,12"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 0,24 L 0,0 L 76.8,0 L 76.8,24 Z"
      fill="#6FFFB0"
      stroke="none"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Circle meter with value 20 out of 100"
    class="c1"
    height="384"
    viewBox="0 0 384 384"
    width="384"
  >
    <circle
      cx="192"
      cy="192"
      fill="none"
      r="180"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 192.0000000000 24.0000000000 L 192.0000000000 0.0000000000 A 192.0000000000 192.0000000000 0 0 1 374.6028511287 132.6687370800 L 351.7774947376 140.0851449450 A 168.0000000000 168.0000000000 0 0 0 192.0000000000 24.0000000000 Z"
      fill="#6FFFB0"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Pie meter with value 20 out of 100"
    class="c1"
    height="384"
    viewBox="0 0 384 384"
    width="384"
  >
    <circle
      cx="192"
      cy="192"
      fill="none"
      r="96"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="192"
    />
    <path
      d="M 192.0000000000 192.0000000000 L 192.0000000000 0.0000000000 A 192.0000000000 192.0000000000 0 0 1 374.6028511287 132.6687370800 L 192.0000000000 192.0000000000"
      fill="#6FFFB0"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Semicircle meter with value 20 out of 100"
    class="c1"
    height="192"
    viewBox="0 0 384 192"
    width="384"
  >
    <path
      d="M 372.0000000000 192.0000000000 A 180.0000000000 180.0000000000 0 0 0 12.0000000000 192.0000000000"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 24.0000000000 192.0000000000 L 0.0000000000 192.0000000000 A 192.0000000000 192.0000000000 0 0 1 36.6687370800 79.1452315598 L 56.0851449450 93.2520776149 A 168.0000000000 168.0000000000 0 0 0 24.0000000000 192.0000000000 Z"
      fill="#6FFFB0"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="0"
    />
  </svg>
</div>
`;

exports[`Meter vertical 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  max-width: 100%;
  overflow: hidden;
}

.c1 path {
  transition: stroke 0.3s,stroke-width 0.3s;
}

<div
  class="c0"
>
  <svg
    aria-label="Bar meter with value 20 out of 100"
    class="c1"
    height="384"
    preserveAspectRatio="none"
    viewBox="0 0 24 384"
    width="24"
  >
    <path
      d="M 12,0 L 12,384"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 24,384 L 0,384 L 0,307.2 L 24,307.2 Z"
      fill="#6FFFB0"
      stroke="none"
      stroke-width="0"
    />
  </svg>
</div>
`;
